# hill-climbing-algorithm

./: .gitignore  CMakeLists.txt  Reduction.cbp  Reduction.depend  Reduction.layout  colinaikmanbor.pdn  damask.pdn  difference.fsh  doer.py  foral.pdn  fragment.fsh  imgui.ini  main.cpp  outline.fsh
include/glad/: glad.h
shaders/: color.fsh  fragment.fsh  outline.fsh  raster.vsh
src/: glad.c  main.cpp
